<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E0DFFD">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E0DFFD"
            tools:context=".SecondActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="#322E78"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="95dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="45dp"
                    android:foregroundGravity="center"
                    app:cardCornerRadius="250dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="95dp"
                        android:layout_height="100dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/photo_1" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="215dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="67dp"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/dr_oleg_mayami"
                    android:textColor="#FFFFFF"
                    android:textFontWeight="800"
                    android:textSize="25sp"
                    app:layout_constraintStart_toEndOf="@+id/cardView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/dental_surgeon"
                    android:textColor="#FFFFFF"
                    android:textFontWeight="800"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/cardView"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/dental_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="95dp"
                android:layout_height="30dp"
                android:layout_marginTop="55dp"
                android:drawableLeft="@drawable/ic_logo_name"
                android:textFontWeight="400"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="148dp"
                android:layout_height="14dp"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/your_friendly_dental_friend"
                android:textColor="#322E78"
                android:textFontWeight="400"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <androidx.cardview.widget.CardView
                android:id="@+id/bnt_call_2page"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="40dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="4dp"
                app:layout_constraintEnd_toStartOf="@+id/bnt_whatsapp_2page"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_phone_item" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:fontFamily="@font/open_sans_light"
                    android:paddingBottom="10dp"
                    android:text="@string/to_call"
                    android:textColor="#003C68"
                    android:textFontWeight="400"
                    android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/bnt_whatsapp_2page"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="40dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="4dp"
                app:layout_constraintEnd_toStartOf="@+id/btn_email_2page"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/bnt_call_2page"
                app:layout_constraintTop_toBottomOf="@+id/textView7">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_whatsapp_dark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:fontFamily="@font/open_sans_light"
                    android:paddingBottom="10dp"
                    android:text="@string/whatsapp"
                    android:textColor="#003C68"
                    android:textFontWeight="400"
                    android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_email_2page"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="15dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/bnt_whatsapp_2page"
                app:layout_constraintTop_toBottomOf="@+id/textView7">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_message_dark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:fontFamily="@font/open_sans_light"
                    android:paddingBottom="10dp"
                    android:text="@string/email_us"
                    android:textColor="#003C68"
                    android:textFontWeight="400"
                    android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_website_2page"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="4dp"
                app:layout_constraintEnd_toStartOf="@+id/btn_telegram_2nd_page"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bnt_call_2page">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_world" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:fontFamily="@font/open_sans_light"
                    android:paddingBottom="10dp"
                    android:text="@string/visit_website"
                    android:textColor="#003C68"
                    android:textFontWeight="400"
                    android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_telegram_2nd_page"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="4dp"
                app:layout_constraintEnd_toStartOf="@+id/btn_save_contact_2nd"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_website_2page"
                app:layout_constraintTop_toBottomOf="@+id/bnt_whatsapp_2page">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_telegram" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:fontFamily="@font/open_sans_light"
                    android:paddingBottom="10dp"
                    android:text="@string/telegram"
                    android:textColor="#003C68"
                    android:textFontWeight="400"
                    android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_save_contact_2nd"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_telegram_2nd_page"
                app:layout_constraintTop_toBottomOf="@+id/btn_email_2page">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_contact_book" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:fontFamily="@font/open_sans_light"
                    android:paddingBottom="10dp"
                    android:text="@string/save_contact"
                    android:textColor="#003C68"
                    android:textFontWeight="400"
                    android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="120dp"
                android:layout_height="22dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/our_location"
                android:textColor="#003C68"
                android:textFontWeight="800"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_website_2page" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="195dp"
                android:layout_height="40dp"
                android:layout_marginStart="28dp"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/shopping_center_asia_mall_1st_floor"
                android:textColor="#003C68"
                android:textFontWeight="400"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/btn_openmap_2page"
                android:layout_width="71dp"
                android:layout_height="15dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/open_map"
                android:textColor="#924883"
                android:textFontWeight="800"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>